--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@testing-library/user-event": "^13.5.0",
 		"axios": "^0.25.0",
 		"boostrap": "^2.0.0",
+		"dateformat": "^5.0.3",
 		"firebase": "^9.6.5",
 		"formik": "^2.2.9",
 		"framer-motion": "^5.6.0",
