--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"react-bootstrap": "^2.1.2",
 		"react-copy-to-clipboard": "^5.0.4",
 		"react-countdown": "^2.3.2",
+		"react-datepicker": "^4.7.0",
 		"react-dom": "^17.0.2",
 		"react-hook-form": "^7.27.1",
 		"react-icons": "^4.3.1",
