--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"react-dom": "^17.0.2",
 		"react-hook-form": "^7.27.1",
 		"react-icons": "^4.3.1",
+		"react-images-uploading": "^3.1.3",
 		"react-loader-spinner": "^5.1.0",
 		"react-paystack": "^3.0.5",
 		"react-redux": "^7.2.6",
