--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@testing-library/user-event": "^13.5.0",
 		"axios": "^0.25.0",
 		"boostrap": "^2.0.0",
+		"chakra-react-select": "^3.1.0",
 		"dateformat": "^5.0.3",
 		"firebase": "^9.6.5",
 		"formik": "^2.2.9",
@@ -34,6 +35,7 @@
 		"react-router": "^5.2.0",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "5.0.0",
+		"react-select": "^5.2.2",
 		"redux": "^4.1.2",
 		"redux-devtools-extension": "^2.13.9",
 		"redux-logger": "^3.0.6",
