--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"@fortawesome/free-brands-svg-icons": "^5.15.4",
 		"@fortawesome/free-solid-svg-icons": "^5.15.4",
 		"@fortawesome/react-fontawesome": "^0.1.17",
+		"@material-ui/core": "^4.12.4",
 		"@testing-library/jest-dom": "^5.16.1",
 		"@testing-library/react": "^12.1.2",
 		"@testing-library/user-event": "^13.5.0",
@@ -29,6 +30,7 @@
 		"react-hook-form": "^7.27.1",
 		"react-icons": "^4.3.1",
 		"react-images-uploading": "^3.1.3",
+		"react-infinite-scroll-component": "^6.1.0",
 		"react-loader-spinner": "^5.1.0",
 		"react-paystack": "^3.0.5",
 		"react-redux": "^7.2.6",
