--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
 		"axios": "^0.25.0",
 		"boostrap": "^2.0.0",
 		"chakra-react-select": "^3.1.0",
+		"chart.js": "^3.7.1",
 		"dateformat": "^5.0.3",
 		"firebase": "^9.6.5",
 		"formik": "^2.2.9",
 		"framer-motion": "^5.6.0",
 		"react": "^17.0.2",
 		"react-bootstrap": "^2.1.2",
+		"react-chartjs-2": "^4.1.0",
 		"react-copy-to-clipboard": "^5.0.4",
 		"react-countdown": "^2.3.2",
 		"react-datepicker": "^4.7.0",
