--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"react-images-uploading": "^3.1.3",
 		"react-infinite-scroll-component": "^6.1.0",
 		"react-loader-spinner": "^5.1.0",
+		"react-mono-js": "^1.1.2",
 		"react-paystack": "^3.0.5",
 		"react-redux": "^7.2.6",
 		"react-router": "^5.2.0",
