--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"redux-logger": "^3.0.6",
 		"redux-persist": "^6.0.0",
 		"redux-thunk": "^2.4.1",
+		"styled-components": "^5.3.5",
 		"url-crypt": "^1.2.1",
 		"uuid": "^8.3.2",
 		"web-vitals": "^2.1.4",
