--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"react-mono-js": "^1.1.2",
 		"react-paystack": "^3.0.5",
 		"react-redux": "^7.2.6",
+		"react-responsive-carousel": "^3.2.23",
 		"react-router-dom": "^6.3.0",
 		"react-scripts": "5.0.0",
 		"react-select": "^5.2.2",
