--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"react-datepicker": "^4.7.0",
 		"react-dom": "^17.0.2",
 		"react-hook-form": "^7.27.1",
+		"react-hot-toast": "^2.2.0",
 		"react-icons": "^4.3.1",
 		"react-images-uploading": "^3.1.3",
 		"react-infinite-scroll-component": "^6.1.0",
