--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"react-loader-spinner": "^5.1.0",
 		"react-mono-js": "^1.1.2",
 		"react-paystack": "^3.0.5",
+		"react-query": "^3.39.1",
 		"react-redux": "^7.2.6",
 		"react-responsive-carousel": "^3.2.23",
 		"react-router-dom": "^6.3.0",
@@ -46,11 +47,9 @@
 		"react-select": "^5.2.2",
 		"redux": "^4.1.2",
 		"redux-devtools-extension": "^2.13.9",
-		"redux-logger": "^3.0.6",
 		"redux-persist": "^6.0.0",
 		"redux-thunk": "^2.4.1",
 		"styled-components": "^5.3.5",
-		"url-crypt": "^1.2.1",
 		"uuid": "^8.3.2",
 		"web-vitals": "^2.1.4",
 		"yup": "^0.32.11"
