--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 REACT_APP_FINOSELL_BASE_URI=https://finosell.link/api/v2
+REACT_APP_IMG_URI=https://finosell.link/
+REACT_APP_PAYSTACK_PUBLIC_KEY=pk_test_d41c2bf87390ed60af6e8851ea104be0f7489e3c
