add api to signup page

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_FINOSELL_BASE_URI=https://finosell.link/api/v2
+REACT_APP_FINOSELL_BASE_URI=https://finosell.link/api/v2,
 REACT_APP_IMG_URI=https://finosell.link/
 REACT_APP_PAYSTACK_PUBLIC_KEY=pk_live_ca0cb1b68f5e47e57a259d7116a1985a68b8ddc5
