--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@fortawesome/free-solid-svg-icons": "^5.15.4",
 		"@fortawesome/react-fontawesome": "^0.1.18",
 		"@material-ui/core": "^4.12.4",
+		"@mui/material": "^5.10.0",
 		"@testing-library/jest-dom": "^5.16.1",
 		"@testing-library/react": "^12.1.2",
 		"@testing-library/user-event": "^13.5.0",
@@ -46,6 +47,7 @@
 		"react-router-dom": "^6.3.0",
 		"react-scripts": "5.0.0",
 		"react-select": "^5.2.2",
+		"react-transition-group": "^4.4.5",
 		"redux": "^4.1.2",
 		"redux-devtools-extension": "^2.13.9",
 		"redux-persist": "^6.0.0",
