--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "my-react-app",
 	"version": "0.1.0",
 	"private": true,
+	"main": "public/electron.js",
 	"dependencies": {
 		"@chakra-ui/react": "^1.8.3",
 		"@emotion/react": "^11.7.1",
@@ -61,7 +62,9 @@
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"eject": "react-scripts eject",
+		"dev": "concurrently -k \"BROWSER=none npm start\" \"npm:electron\"",
+		"electron": "wait-on tcp:3000 && electron ."
 	},
 	"eslintConfig": {
 		"extends": [
@@ -80,5 +83,11 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"concurrently": "^7.3.0",
+		"electron": "^20.0.2",
+		"electron-is-dev": "^2.0.0",
+		"wait-on": "^6.0.1"
 	}
 }
