--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
 		"react-countdown": "^2.3.2",
 		"react-datepicker": "^4.7.0",
 		"react-dom": "^17.0.2",
-		"react-hook-form": "^7.27.1",
+		"react-hook-form": "^7.34.2",
 		"react-hot-toast": "^2.2.0",
 		"react-icons": "^4.3.1",
 		"react-images-uploading": "^3.1.3",
@@ -42,6 +42,8 @@
 		"react-loader-spinner": "^5.1.0",
 		"react-mono-js": "^1.1.2",
 		"react-paystack": "^3.0.5",
+		"react-qr-code": "^2.0.7",
+		"react-qr-reader": "^2.2.0",
 		"react-query": "^3.39.1",
 		"react-redux": "^7.2.6",
 		"react-responsive-carousel": "^3.2.23",
