--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "concurrently -k \"npm run dev\" \"npm:electron\"",
+    "start": "concurrently -k \"npm run dev\" \"npm run electron electron\"",
     "electron": "wait-on tcp:5173  && electron .",
     "rebuild": "electron-rebild -f -w sqlite3"
   },
